# qt-android-ssl

./: CMakeLists.txt  README.md  main.cpp  main.qml
